# co-dev-telegram

./: .gitignore  client.py  config.py  models.py  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 07983e8403ac_.py  6b1eb16b25b8_init.py  e16a4d3b5703_.py
