[tool.poetry]
name = "co-dev-telegram"
version = "0.1.0"
description = ""
authors = ["megahomyak <g.megahomyak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.9.4"
sqlmodel = "^0.0.8"
aiosqlite = "^0.18.0"
aiogram = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
